bk_ida/gobmkida/c2/owl_defend
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2255:12: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
init_owl( &owl_defend_owl, target, 0, 0, 1); 
           ^~~~~~~~~~~~~~
           owl_defend
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2256:7: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
v10 = owl_defend_owl; 
      ^~~~~~~~~~~~~~
      owl_defend
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2257:20: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
current_owl_data = owl_defend_owl; 
                   ^~~~~~~~~~~~~~
                   owl_defend
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2259:7: error: use of undeclared identifier 'owl_defend_owl'
if ( !owl_defend_owl->lunches_are_current ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2260:19: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
owl_find_lunches( owl_defend_owl); 
                  ^~~~~~~~~~~~~~
                  owl_defend
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2268:28: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
prepare_goal_list( target, owl_defend_owl, kworm, ( int *)1, v13, v14); 
                           ^~~~~~~~~~~~~~
                           owl_defend
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2269:44: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
v20 = do_owl_defend( target, &v21, wormid, owl_defend_owl, 0, 0, 0); 
                                           ^~~~~~~~~~~~~~
                                           owl_defend
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/engine/owl.c:2294:1: error: use of undeclared identifier 'owl_defend_owl'
owl_defend_owl->goal, 
^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_defend/src/obj/1/owl.o] Error 1
